--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -96,7 +96,7 @@ https://github.com/ollama/ollama/blob/44b17d2bfa0073e012679152421c0b69671d380e/t
 
 ## アーキテクチャ分析と結論
 
-この一連の動作は、Ollamaの堅牢な設計思想を反映しています。クライアントからサーバーへパラメータを**透明**に渡し、Pydanticによる**型安全性**を確保し、GBNF文法を用いてLLMの出力を**誘導的に制約**するアーキテクチャは、非常に洗練されています。
+この一連の動作は、Ollamaの設計思想を反映しています。クライアントからサーバーへパラメータを**透過的**に渡し、Pydanticによる**型安全性**を確保し、GBNF文法を用いてLLMの出力を**誘導的に制約**するアーキテクチャは、非常に洗練されています。
 
 特にGBNF文法の役割は重要です。これは生成されたテキストを後からフィルタリングするのではなく、トークン生成の確率分布そのものを制御し、文法的に無効なトークンの生成確率を実質的にゼロにすることで、出力形式を保証します。
 
