--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -47,13 +47,15 @@ https://github.com/ollama/ollama
 }
 ```
 
-一方、**`format='json'`と`think=True`を併用した場合**、思考プロセスは`content`フィールド内のJSONの一部として返され、`thinking`フィールドは`null`になります。
+一方、**`format='json'`と`think=True`を併用した場合**、`thinking`フィールドは`null`になります。
+
+思考プロセスの代替として、スキーマで`reasoning`などのフィールドを持たせる方法が考えられます。
 
 ```json
 {
   "message": {
     "thinking": null,
-    "content": "{\"answer\": \"東京\", \"reasoning\": \"思考プロセス...\"}"
+    "content": "{\"reasoning\": \"思考プロセス...\", \"answer\": \"東京\"}"
   }
 }
 ```
