--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -62,7 +62,7 @@ https://github.com/ollama/ollama
 
 ## `format`パラメータの基本仕様
 
-`format`パラメータの型は、[ollama/_types.py:154](https://github.com/ollama/ollama-python/blob/63ca74762284100b2f0ad207bc00fa3d32720fbd/ollama/_types.py#L154)で以下のように定義されています。
+リクエストにおける`format`パラメータの型は、[ollama/_types.py:154](https://github.com/ollama/ollama-python/blob/63ca74762284100b2f0ad207bc00fa3d32720fbd/ollama/_types.py#L154)で以下のように定義されています。
 
 ```python
 format: Optional[Union[Literal['', 'json'], JsonSchemaValue]] = None
