代替手法その2を追記

--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -122,6 +122,8 @@ func (s *Parser) AddContent(content string) (string, string) {
 
 この場合、スキーマでのフィールドの定義順が結果に影響を及ぼすと考えられます。`reasoning`フィールドを先に定義すれば、`answer`フィールドの前に理由を思考することになります。`reasoning`フィールドが回答の後に定義されると、直感的に与えられた回答に対して後付けで説明を生成することになります。
 
+別の方法として、リクエストを2段階に分ける方法があります。最初のリクエストでは`format`を指定せずに自由に生成させて、次のリクエストでその結果をJSON形式に書き換えます。
+
 ## `format`パラメータの基本仕様
 
 クライアント側における`format`パラメータの型は、[ollama/_types.py:154](https://github.com/ollama/ollama-python/blob/63ca74762284100b2f0ad207bc00fa3d32720fbd/ollama/_types.py#L154)で以下のように定義されています。
@@ -297,7 +299,7 @@ for (const auto & reject : rejects) {
 
 一連の動作は、Pydanticによる**型安全性**を確保し、クライアントからサーバーへパラメータを**透過的**に渡し、GBNF文法を用いてLLMの出力を**誘導的に制約**するアーキテクチャとなっています。
 
-1.  **JSONモードは思考分離機能と排他的です。** これはGBNF文法の技術的制約に起因するものであり、両機能を併用したい場合は、JSONスキーマ内に思考内容を格納するフィールドを明示的に定義するアプローチが必要です。
+1.  **JSONモードは思考分離機能と排他的です。** これはGBNF文法の技術的制約に起因するものであり、両機能を併用したい場合は、JSONスキーマ内に思考内容を格納するフィールドを明示的に定義するか、リクエストを2段階に分けるアプローチが必要です。
 
 2.  **`format`パラメータはクライアントからサーバーへ透過的に伝達されます。** クライアント側では型検証のみが行われ、実際の処理はすべてサーバー側で実行されます。
 
