modified: articles/c8c631bb8f31de.md, articles/fa36989a04c9ed.md

--- a/articles/c8c631bb8f31de.md
+++ b/articles/c8c631bb8f31de.md
@@ -5,6 +5,7 @@ type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["llamacpp", "JSONスキーマ"]
 published: true
 ---
+
 llama.cppプロジェクトに実装されている、JSON Schemaを解析し、それに基づいてGBNF（GGML BNF）形式の文法を生成する機能についての調査結果をまとめます。
 
 https://github.com/ggml-org/llama.cpp
@@ -73,3 +74,9 @@ JSON Schemaの仕様にはドキュメンテーションやメタデータのた
 -   `examples`
 
 これらのフィールドは、あくまでスキーマの可読性や開発者向けの補助情報として扱われます。
+
+## 関連記事
+
+構造化出力がどのように処理されるかを調査しました。
+
+https://zenn.dev/7shi/articles/fa36989a04c9ed
