--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -211,7 +211,13 @@ if len(req.Format) > 0 {
 - `format`が`'json'`の場合、定義済みのJSON用GBNF文法（`grammarJSON`）が適用されます。
 - JSONスキーマが指定された場合は、`llama.SchemaToGrammar`関数によって動的にGBNF文法へ変換されます。
 
-この生成された文法は最終的に`runner`プロセス[runner/llamarunner/runner.go:572](https://github.com/ollama/ollama/blob/44b17d2bfa0073e012679152421c0b69671d380e/runner/llamarunner/runner.go#L572)のサンプリングパラメータに設定され、LLMの出力を直接的かつ厳密に制御します。
+:::message
+どのようなSchemaキーワードがサポートされるかは、以下の記事を参照してください。
+:::
+
+https://zenn.dev/7shi/articles/c8c631bb8f31de
+
+生成されたGBNF文法は`runner`プロセス[runner/llamarunner/runner.go:572](https://github.com/ollama/ollama/blob/44b17d2bfa0073e012679152421c0b69671d380e/runner/llamarunner/runner.go#L572)のサンプリングパラメータに設定され、LLMの出力を直接的かつ厳密に制御します。
 
 ```go
 // Extract options from the CompletionRequest
