format指示の抜けを修正

--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -60,11 +60,11 @@ curl -X POST http://localhost:11434/api/generate -d '{
 （以下略）
 ```
 
-一方、**`format='json'`と`think=True`を併用した場合**、直接回答が始まり、`thinking`フィールドは現れません。
+一方、`format='json'`と`think=True`を併用した場合、直接回答が始まり、`thinking`フィールドは現れません。
 
 ```sh
 curl -X POST http://localhost:11434/api/generate -d '{
-  "model": "qwen3:4b", "think": true, "prompt": "日本の首都はどこですか？"
+  "model": "qwen3:4b", "format": "json", "think": true, "prompt": "日本の首都はどこですか？"
 }'
 ```
 ```json
