関連記事セクションを追加し、構造化出力に関する他の記事へのリンクを提供

--- a/articles/c8c631bb8f31de.md
+++ b/articles/c8c631bb8f31de.md
@@ -77,6 +77,10 @@ JSON Schemaの仕様にはドキュメンテーションやメタデータのた
 
 ## 関連記事
 
-構造化出力がどのように処理されるかを調査しました。
+llama.cppで構造化出力がどのように処理されるかを調査しました。
 
 https://zenn.dev/7shi/articles/fa36989a04c9ed
+
+構造化出力の効率的な利用方法を探るため、複数のLLMを対象に5つの異なる指示形式を比較します。
+
+https://zenn.dev/7shi/articles/20250704-structured-output
