--- a/articles/fa36989a04c9ed.md
+++ b/articles/fa36989a04c9ed.md
@@ -310,3 +310,9 @@ for (const auto & reject : rejects) {
 2.  **`format`パラメータはクライアントからサーバーへ透過的に伝達されます。** クライアント側では型検証のみが行われ、実際の処理はすべてサーバー側で実行されます。
 
 この調査により、クライアントライブラリの型安全性から、サーバー内部の2段階アーキテクチャ、そしてGBNFによる出力制御に至るまで、Ollamaエコシステム全体の`format`パラメータに関する包括的な理解が得られました。
+
+## 関連記事
+
+構造化出力の効率的な利用方法を探るため、複数のLLMを対象に5つの異なる指示形式を比較します。
+
+https://zenn.dev/7shi/articles/20250704-structured-output
