はじめにの文章を簡潔に修正

--- a/articles/20251017-amd-llm.md
+++ b/articles/20251017-amd-llm.md
@@ -8,7 +8,7 @@ published: true
 
 # はじめに
 
-AMD Ryzen AI Max+ 395 を搭載した EVO-X2 で、LLM（大規模言語モデル）の推論速度を測定しました。CPU/GPU/NPU の 3 種類のデバイスで gpt-oss:20b を実行し、それぞれのパフォーマンスを比較した結果を報告します。
+AMD Ryzen AI Max+ 395 を搭載した EVO-X2 で、gpt-oss:20b を CPU/GPU/NPU で動作させて処理速度を比較します。
 
 :::message
 本記事は Claude Code の生成結果をベースに編集しました。
