まとめの文章を修正し、NPU のメリットについての説明を明確化

--- a/articles/20251017-amd-llm.md
+++ b/articles/20251017-amd-llm.md
@@ -65,7 +65,7 @@ https://gazlog.com/entry/amd-zen6-no-more-npu/
 
 # まとめ
 
-Ryzen AI Max+ 395 での LLM 推論速度測定では、GPU > CPU > NPU という結果になりました。デスクトップ環境では、現時点では GPU での実行が推奨されます。
+Ryzen AI Max+ 395 での LLM 推論速度測定は GPU > CPU > NPU という結果になりました。デスクトップ環境では NPU のメリットが少ないため、GPU での実行が推奨されます。
 
 # 関連記事
 
