他のモデルの計測結果へのリンクを追加

--- a/articles/20251017-amd-llm.md
+++ b/articles/20251017-amd-llm.md
@@ -49,6 +49,12 @@ GPU で gpt-oss:120b を動作させると、プロンプト評価速度 209.07 
 
 Ryzen AI Max+ 395 の VRAM 容量を活かしつつ実用的な速度で動くモデルとして理想に近いかもしれません。
 
+## その他
+
+その他のモデルの計測結果については、以下を参照してください。
+
+- https://gist.github.com/7shi/013baeb748f63fdb3057b9a682832fdb
+
 # NPU について
 
 NPU には以下のような特徴があります。
